@@ -606,6 +606,8 @@ def clush_main(args):
                       help="return the largest of command return codes")
     optgrp.add_option("-b", "--dshbak", action="store_true", dest="gather",
                       default=False, help="display results in a dshbak-like way")
+    optgrp.add_option("-B", action="store_true", dest="gatherall",
+                      default=False, help="same as -b but including standard error")
     parser.add_option_group(optgrp)
 
     # Copy
@@ -745,12 +747,14 @@ def clush_main(args):
     command_timeout = config.get_command_timeout()
     task.set_info("command_timeout", command_timeout)
 
+    gather = options.gatherall or options.gather
     # Enable stdout/stderr separation
-    task.set_default("stderr", True)
+    task.set_default("stderr", not options.gatherall)
 
     # Disable MsgTree buffering if not gathering outputs
-    task.set_default("stdout_msgtree", options.gather)
-    task.set_default("stderr_msgtree", options.gather)
+    task.set_default("stdout_msgtree", gather)
+    # Always disable stderr MsgTree buffering
+    task.set_default("stderr_msgtree", False)
 
     # Set timeout at worker level when command_timeout is defined.
     if command_timeout > 0:
@@ -787,12 +791,11 @@ def clush_main(args):
             run_copy(task, options.source_path, options.dest_path, nodeset_base,
                     0, options.preserve_flag)
         else:
-            run_command(task, ' '.join(args), nodeset_base, options.gather,
-                    timeout, options.label, config.get_verbosity(),
-                    gather_print)
+            run_command(task, ' '.join(args), nodeset_base, gather, timeout,
+                        options.label, config.get_verbosity(), gather_print)
 
     if user_interaction:
-        ttyloop(task, nodeset_base, options.gather, timeout, options.label,
+        ttyloop(task, nodeset_base, gather, timeout, options.label,
                 config.get_verbosity(), gather_print)
     elif task.default("USER_interactive"):
         print >> sys.stderr, "ERROR: interactive mode requires a tty"
